--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -142,7 +142,7 @@ a {
 }
 .MuiListItem-container {
   /* background-color: #f0bf70; */
-  background-color: #82866F;
+  background-color: #82866f;
   border-radius: 2rem;
   color: #ffffff;
   margin-bottom: 1rem;
@@ -343,6 +343,18 @@ svg.pie circle {
   }
   .MuiButton-outlinedSizeLarge {
     padding: 0.5rem !important;
+  }
+  .header-month {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12pt;
+    font-weight: 500;
+    letter-spacing: 1pt;
+    color: #676c72;
+  }
+  .col {
+    padding: 10px 5px;
   }
 }
 
